# truminus-hw-simulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
.claude/skills/multiplusble/: SKILL.md
.claude/skills/truma-protocol/: SKILL.md
.claude/skills/ultimatronble/: SKILL.md
.claude/skills/victronble/: SKILL.md
main/: CMakeLists.txt  main.c  openair_sim.c  openair_sim.h  truma_sim.c  truma_sim.h
